New registration page and page profile
